【提交类型】：optimization 【提交描述】：增加logback-spring日志格式配置文件 【提交内容】： 1.增加了日志配置,使用Lombok中的@Slf4j注解 2.配置日志格式配置：logback-spring.xml 3.优化druid配置，增加了慢sql输出到指定log_druid.log文件中

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,13 +57,22 @@ spring:
       #配置扩展插件
       filters: stat,wall,slf4j
       #通过connectProperties属性来打开mergeSql功能；慢SQL记录
-      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+      #slowSqlMillis=5000：5秒以上视为慢sql
+      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000;druid.stat.logSlowSql=true
       #合并多个DruidDataSource的监控数据
       use-global-data-source-stat: true
       #设置访问druid监控页的账号和密码,默认没有
       stat-view-servlet:
         login-username: admin
         login-password: admin123
+        url-pattern: "/druid/*"
+        enabled: true
+      web-stat-filter:
+        enabled: true
+        # 添加过滤规则
+        url-pattern: /*
+        # 忽略过滤格式
+        exclusions: "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*"
 
   #JPA配置
   jpa:
